[package]
name = "little-locator-backend"
version = "1.0.0"
edition = "2021"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"

[dependencies]
ll_data = { path = "../data_types" }
salvo = { version = "0.57", features = ["cors", "serve-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
