[package]
name = "little-locator-backend"
version = "1.0.3"
edition = "2021"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"

[dependencies]
ll_data = { path = "../data_types" }
log = "0.4"
salvo = { version = "0.57", features = ["cors", "serve-static", "websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.3.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
