[package]
name = "little-locator-backend"
version = "1.1.0"
edition = "2021"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"

[dependencies]
# base64 = "0.21"
ll_data = { path = "../data_types" }
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
salvo = { version = "0.64", features = ["cors", "serve-static", "websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.3.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
