[package]
name = "little-locator-frontend"
version = "1.0.6"
edition = "2021"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4"
egui = "0.24"
egui_extras = { version = "0.24", features = ["all_loaders", "chrono"] }
ewebsock = "0.4"
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow", "persistence"] }
ehttp = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
ll_data = { path = "../data_types" }
log = "0.4"
rfd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window", "Location"]}
